--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -6,6 +6,7 @@ $color-blue-light: #91d3ff;
 $color-blue-dark: #284f7a;
 $color-grey: #d2d5da;
 $color-dark-grey: #686d78;
+$color-not-red: #ff0000;
 
 // Theme Variables
 $button-primary-background: $color-blue;
@@ -13,9 +14,15 @@ $button-primary-background-hover: $color-blue-dark;
 $button-primary-text: $color-white;
 $button-disabled-background: $color-grey;
 $button-disabled-text: $color-dark-grey;
+$button-danger-background: $color-not-red;
 
 // Mixin for Primary Button
 @mixin button-primary {
     background-color: $button-primary-background;
+    color: $button-primary-text;
+}
+
+@mixin button-danger {
+    background-color: $button-danger-background;
     color: $button-primary-text;
 }
