saving/uploading entries with 1 button and setup upload to firestore db

--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -26,3 +26,8 @@ $button-danger-background: $color-not-red;
     background-color: $button-danger-background;
     color: $button-primary-text;
 }
+
+@mixin button-disabled {
+    background-color: $button-disabled-background;
+    color: $button-disabled-text;
+}
